--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
+  "name": "caminante-backend",
+  "version": "1.0.0",
+  "description": "Backend para Caminante",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "cords": "^1.0.4",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mysql": "^2.18.1"
